# VideoGPT

./: .gitignore  AGENTS.md  USAGE.md  pyproject.toml  usage.md
scripts/: eval_surgwmbench_videogpt.py  train_surgwmbench_videogpt.py  train_vqvae.py
tests/: test_future_prediction.py  test_surgwmbench_data.py
videogpt/: __init__.py  future_prediction.py  gpt.py  surgwmbench_data.py  surgwmbench_metrics.py
